# DaneBezTwarzy

./: .gitignore  CHANGELOG_LLM.md  DETECTORS.md  DaneBezTwarzy_Prezentacja.pptx  INSTALL.md  LICENSE  LINK_VIMEO_BRIEF.url  LLM_USAGE.md  README.md  TECHNICAL.md  analyze_orig.py  build_nuitka.bat  build_nuitka.ps1  config.example.json  create_presentation.py  create_sample.py  output.txt  output_nuitka1.txt  pyproject.toml  report9.html  requirements.txt  test_data.txt  test_data_anonimizowany.txt  test_input.txt  test_input_anonimizowany.txt  test_nlp_detection.py  test_quick.py  test_report.json  test_sample.txt  text1-output2.txt  vimeo_link.txt  wyniki4.json  wyniki88.json  wyniki881.json  wyniki888.html  wyniki888.json  wyniki_no_llm_no_nlp.html  wyniki_use_nlp_no_llm.html  wynikixxx.html  wynikixxx.json
RESULTS/: text1-output-use_nlp_use_llm-FULL_OPCJA.txt  text1-output_nollm_no_nlp.txt  text1-output_use_nlp_no_llm.txt  wyniki_no_llm_no_nlp.json  wyniki_use_nlp_no_llm.json
docs/: CLI_DETECTOR_GUIDE.md  LLM_USAGE.md
examples/: README.md  basic_usage.py  llm_usage.py
nask_train/: anonimizowany.txt  report.json
src/dane_bez_twarzy/: __init__.py  cli.py
src/dane_bez_twarzy/core/: anonymizer.py  config.py  detector.py
src/dane_bez_twarzy/detectors/: __init__.py  llm_detector.py  nlp_detector.py  placeholder_detector.py  polish_detector.py  regex_detector.py
src/dane_bez_twarzy/processors/: __init__.py
src/dane_bez_twarzy/reporting/: __init__.py  html_reporter.py  pdf_reporter.py
src/dane_bez_twarzy/strategies/: __init__.py
src/dane_bez_twarzy/utils/: logger.py  patterns.py
tests/: README.md  test_config.py  test_llm_detector.py  test_spacy_direct.py
